--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "husky": "^8.0.1",
-    "lint-staged": "^12.4.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
@@ -33,6 +31,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "4",
+    "lint-staged": "^12.4.2",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
