--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
+    "vite-plugin-html": "^3.2.0",
     "vite-tsconfig-paths": "^3.4.1"
   }
 }
