--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.3",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
