--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "qs": "^6.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
