--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_KAKAO_JAVASCRIPT_KEY=02e0caae3e4116da61d734a06528cd86
 VITE_KAKAO_RESTAPI_KEY=09bebf5106adf50d6a204a7ac2c22779
 VITE_KAKAO_OPEN_URL=https://kauth.kakao.com/oauth/authorize?client_id={clientId}&redirect_uri={redirectUri}&response_type=code&prompt=login
-VITE_SERVER_URL=http://49.50.175.112:8080
+VITE_SERVER_URL=http://49.50.175.112:8080/api
