--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "lottie-react": "^2.3.1",
     "qs": "^6.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
