--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.3",
     "recoil-persist": "^4.2.0",
