--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build-watch": "tsc && vite build --watch",
     "preview": "vite preview",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "jest"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.25",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
+    "@types/jest": "^28.1.6",
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^28.1.3",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
